Membuat halaman kedua js yaitu Teks Tampilan sesuai dengan <Jml>

--- a/index.html
+++ b/index.html
@@ -1,23 +1,29 @@
 <!DOCTYPE html>
 <html lang="id">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Tugas 4 - JavaScript</title>
+    <title>Form Dinamis</title>
 </head>
+
 <body>
     <center>
-    <div class="container">
-        <label for="nama">Nama :</label>
-        <input type="text" id="nama" placeholder="Teks Nama"><br>
+        <div class="container">
+            <label for="nama">Nama :</label>
+            <input type="text" id="nama" placeholder="Teks Nama"><br>
 
-        <label for="jumlah">Jumlah Pilihan :</label>
-        <input type="number" id="jumlah" placeholder="Jml"><br>
+            <label for="jumlah">Jumlah Pilihan :</label>
+            <input type="number" id="jumlah" placeholder="Jml"><br>
 
-        <button onclick="prosesData()">OK</button>
-    </div>
-    <script src="script.js"></script>
+            <button onclick="prosesData()">OK</button>
+
+            <div id="inputContainer"></div>
+        </div>
     </center>
+    <script src="script.js"></script>.
 </body>
+
+
 </html>
